rsass/tests/spec/non_conformant/errors/import/url/mixin/control_else/mod.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/import/url/mixin/control-else"

fn runner() -> crate::TestRunner {
    super::runner().with_cwd("control-else")
}

mod outside;
